--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AirBnB Clone</title>
 </head>
 
 <body style="margin: 0px; padding: 0px;" padding>
     <header style="background-color: #ff0000; height: 70px; width: 100%;">
 
     </header>
-    <footer style="background-color: #00ff00; height: 60px; width: 100%; text-align: center; position: fixed; bottom: 0;">
-        <p style="vertical-align: middle;"> Best School </p>
+    <footer style="align-content: center; background-color: #00ff00; height: 60px; width: 100%; text-align: center; position: fixed; bottom: 0;">
+        <p style="padding-top: 0.5em;">Best School</p>
     </footer>
 </body>
 
