--- a/web-static/0-index.html
+++ b/web-static/0-index.html
@@ -7,11 +7,21 @@
     <title>Document</title>
   </head>
   <body style="margin: 0; padding: 0">
-    <header style="color: #ff0000; height: 70px; width: 100%"></header>
+    <header
+      style="background-color: #ff0000; height: 70px; width: 100%"
+    ></header>
     <footer
-      style="color: #00ff00; height: 60px; width: 100%; text-align: center"
+      style="
+        background-color: #00ff00;
+        height: 60px;
+        width: 100%;
+        text-align: center;
+        align-content: center;
+        position: fixed;
+        bottom: 0;
+      "
     >
-      Best school
+     <p style="padding: 10px;">Best school</p> 
     </footer>
   </body>
 </html>
